# closet

./: Cargo.toml  docker-compose.yaml  rustfmt.toml
api/: Cargo.toml
api/src/: authorization.rs  configuration.rs  dev_debug.rs  lib.rs  main.rs
api/src/handle/: auth.rs  health.rs
api/src/handler/: auth.rs  health.rs
api/src/logging/: middleware.rs
api/src/middleware/: authorization.rs  mod.rs
api/src/response/: anyhow.rs  error.rs  message.rs  mod.rs  result.rs
entity/: Cargo.toml
entity/src/: error.rs  health.rs  lib.rs  user.rs
entity/src/class/: email.rs  id.rs  mod.rs  password.rs  status.rs  token68.rs  username.rs
entity/src/error/: validate.rs
entity/src/model/: health.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
