[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.6"
hyper = "^0.14"
tower = { version = "^0.4", features = ["timeout"] }
tokio = { version = "^1.28", features = ["full"] }

tracing = "^0.1"
tracing-subscriber = "^0.3"
