[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

axum = "^0.6"
hyper = "^0.14"
tower = { version = "^0.4", features = ["timeout"] }
tokio = { version = "^1.28", features = ["full"] }
sea-orm = { version = "^0.11", features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "chrono",
    "macros",
] }

tracing = "^0.1"
tracing-subscriber = "^0.3"

anyhow = "^1.0"
thiserror = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
serde_with = "^3.0"

duration-str = "0.5.1"
