[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ulid = { version = "^1.0", features = ["uuid"] }
sea-orm = { version = "^0.11", features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "chrono",
    "macros",
] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.28", features = ["full"] }
regex = "^1.8"
pwhash = "^1.0"
thiserror = "^1.0"
anyhow = "^1.0"
async-trait = "^0.1"
